added hx-indicator for loading state

--- a/go-htmx/index.html
+++ b/go-htmx/index.html
@@ -27,10 +27,16 @@
 
       <div class="flex-1 border-2 rounded-md p-4">
         <h1 class="mb-4 text-xl font-semibold">Add Film</h1>
-        <form hx-post="/add-film" hx-target="#film-list" hx-swap="beforeend">
+        <form
+          hx-post="/add-film"
+          hx-target="#film-list"
+          hx-swap="beforeend"
+          hx-indicator="#spinner"
+        >
           <div class="mb-2">
             <label for="film-title">Title</label>
             <input
+              required
               type="text"
               name="title"
               id="film-title"
@@ -40,6 +46,7 @@
           <div class="mb-3">
             <label for="film-director">Director</label>
             <input
+              required
               type="text"
               name="director"
               id="film-director"
@@ -50,7 +57,30 @@
             type="submit"
             class="text-white p-2 rounded-md bg-violet-500 hover:bg-violet-600 active:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-300"
           >
-            ADD
+            <span class="flex items-center pr-6 font-bold">
+              <svg
+                class="w-5 h-5 mr-3 -ml-1 text-white animate-spin htmx-indicator"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                id="spinner"
+              >
+                <circle
+                  class="opacity-25"
+                  cx="12"
+                  cy="12"
+                  r="10"
+                  stroke="currentColor"
+                  stroke-width="4"
+                ></circle>
+                <path
+                  class="opacity-75"
+                  fill="currentColor"
+                  d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                ></path>
+              </svg>
+              ADD
+            </span>
           </button>
         </form>
       </div>
